# mmcomposer

./: .gitignore  .readthedocs.yaml  IDEAS.md  README.md  TODO.md  pyproject.toml
.streamlit/: config.toml
docs/: _config.yml  _toc.yml  mbarrier.md  part3_autotuning.md  part4_b200_reference.md  requirements.txt
examples/: benchmark.py  matmul.py  quickstart.py  quickstart_epilogue.py  quickstart_swiglu.py  swiglu_dual_b.py
linear/: epilogue-aux-status.md  epilogue-dsl.md
mmcomposer/: COMPILATION.md  DESIGN.md  EPILOGUE.md  __init__.py  autotune.py  benchmark.py  cache.py  combos.py  compiler.py  epilogue.py  hopper.py  hopper_swiglu.py  leaderboard.py  mmc.py  mvp_core.py  runtime.py  swiglu.py  torch_ops.py
presentation/: .gitignore  main.tex  upload_to_hibe.sh
results/: 10240x10240x10240.txt  11264x11264x11264.txt  12288x12288x12288.txt  16384x4608x768.txt  2048x36864x12288.txt  2048x49152x12288.txt  32768x12288x768.txt  32768x4608x768.txt  32768x9216x768.txt  4096x12288x4096.txt  4096x16384x4096.txt  4096x4096x4096.txt  5120x5120x5120.txt  6144x6144x6144.txt  65536x2304x768.txt  7168x7168x7168.txt  8192x24576x8192.txt  8192x32768x8192.txt  8192x8192x8192.txt  9216x9216x9216.txt  README.md
study-gau-nernst/: DIRECT_STORE_REPORT.md  README.md  autotune_4096_best_config.json  autotune_4096_best_host.py  autotune_4096_best_kernel.cu  autotune_4096_prod_matrix.json  autotune_4096_prod_ordered.json  bench.py  bench_v7c_1000.py  binding.cpp  exp_l1noalloc_target_result.json  fixed_ld16_target_result.json  fixed_target_result.json  ours_direct_EXP_3DTMA_host.py  (+26 more)
(+264 files in other folders)
